<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_about"
        tools:context=".AboutActivity" android:orientation="vertical" android:gravity="center|top">

    <ImageView
            android:src="@drawable/bmiabout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bmi_about_imageHeight" android:id="@+id/bmi_about_image" android:layout_weight="1"
            android:scaleType="centerCrop"/>
    <TextView
            android:text="@string/header_activity_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/bmi_about_title" android:textSize="36sp"
            android:textStyle="bold" android:textAlignment="center" android:layout_weight="0.1"/>
    <TextView
            android:text="@string/description_activity_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/bmi_about_description" android:layout_weight="1"
            android:typeface="normal" android:textSize="18sp" android:textAlignment="center"
    />
    <TextView
            android:text="@string/author_activity_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/bmi_about_author" android:layout_weight="0.2"
            android:fontFamily="monospace"/>
</LinearLayout>
