<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:fillViewport="true" android:clipToPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity" android:minHeight="205dp" android:visibility="visible">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bmi_main_massTV"
                android:layout_marginTop="@dimen/bmi_margin_top"
                app:layout_constraintTop_toBottomOf="@+id/bmi_main_logo" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/bmi_margin_elements"
                app:layout_constraintHorizontal_bias="0.1" android:layout_marginStart="@dimen/bmi_margin_elements"/>
        <ImageView
                android:layout_width="@dimen/bmi_width_zero"
                android:layout_height="@dimen/bmi_width_zero" app:srcCompat="@drawable/bmi"
                android:id="@+id/bmi_main_logo"
                android:scaleType="fitXY"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/bmi_menu_about" android:layout_marginBottom="@dimen/bmi_margin_bottom"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bmi_main_descriptionTV"
                android:text="@string/label_fill" android:textAlignment="center" android:textSize="30sp"
                android:layout_marginEnd="@dimen/bmi_margin_elements"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="@dimen/bmi_margin_elements"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.463"
                android:layout_marginBottom="@dimen/bmi_margin_bottom" app:layout_constraintBottom_toTopOf="@+id/bmi_main_countBtn"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bmi_main_resultTV"
                android:textAlignment="center" android:textSize="60sp"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@+id/bmi_main_heightET" android:layout_marginStart="@dimen/bmi_margin_elements"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="@dimen/bmi_margin_bottom" app:layout_constraintBottom_toTopOf="@+id/bmi_main_descriptionTV"
                android:layout_marginEnd="@dimen/bmi_margin_elements" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.46" android:layout_marginTop="@dimen/bmi_margin_top"/>
        <androidx.appcompat.widget.Toolbar
                android:layout_width="@dimen/bmi_toolbar_width"
                android:layout_height="@dimen/bmi_toolbar_height"
                android:background="@color/colorPrimary"
                android:theme="@style/Widget.AppCompat.Light.ActionBar.Solid"
                android:minHeight="?attr/actionBarSize"
                android:id="@+id/bmi_menu_about"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:theme="@style/ToolBarStyle" app:titleTextColor="@android:color/background_light">
        </androidx.appcompat.widget.Toolbar>
        <EditText
                android:layout_width="0dp"
                android:ems="10"
                android:id="@+id/bmi_main_massET"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/bmi_margin_top"
                app:layout_constraintTop_toBottomOf="@+id/bmi_main_massTV" android:layout_marginStart="@dimen/bmi_main_marginEditText"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/bmi_main_marginEditText"
                app:layout_constraintEnd_toEndOf="parent" android:hint="@string/bmi_main_massHint"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bmi_main_heightTV"
                android:layout_marginTop="@dimen/bmi_margin_top"
                app:layout_constraintTop_toBottomOf="@+id/bmi_main_massET" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/bmi_margin_elements" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/bmi_margin_elements" app:layout_constraintHorizontal_bias="0.1"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/bmi_main_heightET"
                app:layout_constraintTop_toBottomOf="@+id/bmi_main_heightTV"
                android:layout_marginTop="@dimen/bmi_margin_top" android:layout_marginStart="@dimen/bmi_main_marginEditText"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/bmi_main_marginEditText"
                app:layout_constraintEnd_toEndOf="parent" android:hint="@string/bmi_main_heightHint"/>
        <Button
                android:text="@string/label_count"
                android:layout_width="0dp"
                android:layout_height="@dimen/bmi_main_countBtnHeight"
                android:id="@+id/bmi_main_countBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginEnd="@dimen/bmi_main_CountBtnMargin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="@dimen/bmi_margin_bottom"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/bmi_margin_top" app:layout_constraintTop_toBottomOf="@+id/bmi_main_heightET"
                app:layout_constraintVertical_bias="1.0" android:layout_marginStart="@dimen/bmi_main_CountBtnMargin"
                app:layout_constraintHorizontal_bias="0.0"/>
        <ImageButton
                android:layout_width="@dimen/bmi_main_InfoBtnWidth"
                android:layout_height="wrap_content" app:srcCompat="@drawable/iconfinder_15_3049264"
                android:id="@+id/bmi_main_infoBtn"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/bmi_margin_elements"
                android:layout_marginBottom="@dimen/bmi_margin_bottom" app:layout_constraintBottom_toTopOf="@+id/bmi_main_descriptionTV"
                android:layout_marginTop="@dimen/bmi_margin_top" app:layout_constraintTop_toBottomOf="@+id/bmi_main_heightET"
                android:visibility="invisible"
                android:cropToPadding="true" android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toEndOf="@+id/bmi_main_resultTV" android:layout_marginStart="@dimen/bmi_margin_elements"
                app:layout_constraintHorizontal_bias="0.0"
                android:scaleType="fitCenter"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>